--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: chatview3
 description: "Another modified version of chatview package."
 version: 0.0.1
-repository: 
+repository: https://github.com/bousalem98/chatview3
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
