--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chatview3
-description: "Another modified version of chatview package."
-version: 0.0.1
+description: "Another modified version of chatview package that allows you to integrate Chat View with highly customization options"
+version: 0.0.2
 repository: https://github.com/bousalem98/chatview3
 
 environment:
@@ -11,10 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   grouped_list: ^5.1.2
-  intl: ^0.18.0
+  intl: ^0.19.0
   flutter_linkify: ^6.0.0
   url_launcher: ^6.1.7
-  emoji_picker_flutter: ^1.6.0
+  emoji_picker_flutter: ^2.0.0
   http: ^1.1.0
   html: ^0.15.1
   any_link_preview: ^3.0.0
