--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chatview3
 description: "Another modified version of chatview package that allows you to integrate Chat View with highly customization options"
-version: 0.0.4
+version: 0.0.5
 repository: https://github.com/bousalem98/chatview3
 
 environment:
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   grouped_list: ^5.1.2
-  intl: ^0.18.1
+  intl: ">=0.18.0 <2.0.0"
   flutter_linkify: ^6.0.0
   url_launcher: ^6.1.7
   emoji_picker_flutter: ^1.6.4
