--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_linkify: ^6.0.0
   url_launcher: ^6.1.7
   emoji_picker_flutter: ^1.6.4
+  #emoji_picker_flutter: ^2.2.0
   http: ^1.1.0
   html: ^0.15.1
   any_link_preview: ^3.0.0
